# ebpf-apps

./: .gitignore  LICENSE  README.md
bcc-apps/: .gitignore  README.md
bpf-apps/: Makefile  README.md  bashreadline.bpf.c  bashreadline.c  bashreadline.h  bashreadline.skel.h  block_shell.bpf.c  block_shell.c  block_shell.skel.h  cuda_events.bpf.c  cuda_events.c  cuda_events.h  cuda_events.skel.h  execsnoop.bpf.c  execsnoop.c  execsnoop.h  execsnoop.skel.h  execsnoop_v2.bpf.c  execsnoop_v2.c  execsnoop_v2.h  execsnoop_v2.skel.h  hello.bpf.c  hello.c  hello.skel.h  hello_btf.bpf.c  hello_btf.c  hello_btf.skel.h  http_trace.bpf.c  http_trace.c  http_trace.h  http_trace.skel.h  https_trace.bpf.c  https_trace.c  https_trace.h  https_trace.skel.h  https_trace_bad.bpf.c  https_trace_bad.c  https_trace_bad.skel.h  tc_block_tcp.bpf.c  tc_block_tcp.c  (+17 more)
bpftrace/: README.md  block-container-shell.bt  bpf_bpf.bt  cuda_trace.bt  dropwatch-v2.bt  dropwatch.bt  execsnoop-container.bt  execsnoop-v1.bt  execsnoop-v2.bt  execsnoop-v3.bt  execsnoop-v4.bt  nccl_interference.bt  nvidia_driver.bt  sslsnoop.bt  tcpdrop-new.bt  tcpdrop-old.bt
chatgpt/: README.md  app.py
go/: README.md  go.sum  trace.go  vmlinux.h  xdp_trace.bpf.c  (+2 more)
rust/hello-aya/hello-aya-ebpf/: Cargo.toml
rust/hello-aya/hello-aya-ebpf/src/: main.rs
rust/hello-libbpf/: Cargo.toml  build.rs
rust/hello-libbpf/src/: main.rs
rust/hello-libbpf/src/bpf/: tc.bpf.c  tc.skel.rs
rust/tc_block_tcp/: Cargo.toml  README.md
rust/tc_block_tcp/src/: main.rs
rust/tc_block_tcp/src/bpf/: mod.rs  tc.bpf.c  tc.skel.rs  vmlinux.h
(+108 files in other folders)
