[package]
name = "hello-libbpf"
version = "0.1.0"
edition = "2024"

[build-dependencies]
libbpf-cargo = "0.24.8"
vmlinux = { git = "https://github.com/libbpf/vmlinux.h", version = "0.0.0" }

[dependencies]
anyhow = "1.0.97"
libbpf-rs = {version="0.24.8"}
clap = { version = "4.5.32", default-features = false, features = ["std", "derive", "help", "usage"] }
nix = { version = "0.29.0", default-features = false, features = ["net", "user"] }
